# evidence_pop

./: .gitignore  LICENSE  README.md  pyproject.toml
evidence_pop/: evidence.py  utils.py  workers.py
examples/GW/MCMC/: MCMC_GW150914_data0_1126259462-391_analysis_H1L1_merge_result.hdf5  logP.txt  options.ini  samples.txt
examples/GW/NS/: logP.txt  options.ini  samples.txt
examples/GW/config_files/: dynesty_GW150914_config_complete.ini  mcmc_GW150914_config_complete.ini
examples/NIX/: logP.txt  options.ini  samples.txt
examples/bivariate_gaussian/: logP.txt  options.ini  samples.txt
examples/neal/: draws_samples.json  logP.txt  options.ini  samples.txt
