[build-system]
requires = [
    "oldest-supported-numpy",
    "setuptools>=42",
    "wheel",
    "build",
    ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ['evidence_pop']

[project]
name = 'evidence_pop'
description = 'evidence_pop'
version = '0.1.0'
requires-python = '< 3.12'
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ['evidence', 'inference', 'hierarchical', 'HDPGMM', 'monte carlo', 'Bayesian statistics']
authors = [
  {name = "Stefano Rinaldi", email = "stefano.rinaldi@uni-heidelberg.de"},
  {name = "Gabriele Demasi", email = "gabriele.demasi@unifi.it"},
  {name = "Walter Del Pozzo", email = "walter.delpozzo@unipi.it"},
  ]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "figaro >= 1.4",
    "ray",
    ]

[project.urls]
Repository = "https://github.com/sterinaldi/evidence_pop.git"
Issues     = "https://github.com/sterinaldi/evidence_pop/issues"

[project.scripts]
evidence = "evidence_pop.evidence:main"
